# web_eleven_2025

./: .env.example  README.md  alembic.ini  docker-compose.yaml  main.py  movies_app.db  pyproject.toml
alembic/: env.py
alembic/versions/: 2d452f074614_movie_model.py  384f9f75906d_make_movie_title_unique.py  3b7c29986b9b_add_movierating_rating_field.py  9f2e3ebf94d2_add_movierating_table.py  a60b0933fdbd_created_user_model.py  c33365b39539_make_release_date_instead_of_year.py
src/api/: movie_api.py  user_api.py
src/config/: app_config.py
src/db/: redis_config.py  session.py
src/middleware/: hello_world_middleware.py  ip_blacklist_middleware.py
src/models/: __init__.py  movie.py  movie_rating.py  user.py  user_role.py
src/repositories/: movie_rating_repository.py  movie_repository.py  user_repository.py
src/schemas/: movie.py  movie_rating.py  user.py
src/security/: oauth.py  passwords.py
src/services/: movie_service.py  user_service.py
tests/: movie_service_test.py
